[gd_scene load_steps=12 format=2]

[ext_resource path="res://TwoPlayer/TwoPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/sprite__.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.301961, 0.588235, 1 )

[sub_resource type="DynamicFont" id=2]
size = 66
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.254902, 0.4, 0.607843, 1 )

[sub_resource type="DynamicFont" id=4]
size = 66
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 66
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.466667 )

[sub_resource type="DynamicFont" id=9]
size = 66
font_data = ExtResource( 2 )

[node name="TwoPlayer" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CreateMatch" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = 6.10352e-05
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateNewMatchButton" type="Button" parent="CanvasLayer/CreateMatch"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 112.0
margin_top = -40.0001
margin_right = 526.0
margin_bottom = 43.9999
rect_scale = Vector2( 0.997941, 1 )
custom_fonts/font = SubResource( 2 )
text = "Create new match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinMatch" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 640.0
margin_bottom = 0.00012207
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCodeEdit" type="TextEdit" parent="CanvasLayer/JoinMatch"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -616.0
margin_top = -40.0001
margin_right = -152.0
margin_bottom = 47.9999
hint_tooltip = "Enter room code"
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCodeEditDescription" type="Label" parent="CanvasLayer/JoinMatch"]
margin_left = 24.0001
margin_top = 264.0
margin_right = 339.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 5 )
text = "Enter the match code"

[node name="JoinButton" type="Button" parent="CanvasLayer/JoinMatch"]
margin_left = 504.0
margin_top = 320.0
margin_right = 616.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 6 )
text = "Join"

[node name="ErrorJoining" type="Label" parent="CanvasLayer/JoinMatch"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -616.0
margin_top = -222.0
margin_right = -24.0
margin_bottom = -133.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.984314, 0.537255, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockingPanel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingText" type="Label" parent="CanvasLayer/BlockingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -39.0
margin_right = 179.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 9 )
text = "CONNECTING..."
[connection signal="pressed" from="CanvasLayer/CreateMatch/CreateNewMatchButton" to="." method="_on_CreateNewMatchButton_pressed"]
[connection signal="pressed" from="CanvasLayer/JoinMatch/JoinButton" to="." method="_on_JoinButton_pressed"]
